make js changes patch